Ingress-nginx/ingress-name-based-virtual-hosting.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: demoapp-nginx
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: demoapp.wu.com
    http:
      paths:
      - backend:
          service:
            name: demoapp
            port:
              number: 80
        path: /(.*)
        pathType: ImplementationSpecific
  - host: nginx.wu.com
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /(.*)
        pathType: ImplementationSpecific
