Ingress-nginx/ingress-simple-fanout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: demoapp-nginx
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: web.wu.com
    http:
      paths:
      - backend:
          service:
            name: demoapp
            port:
              number: 80
        path: /demoapp(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /nginx(/|$)(.*)
        pathType: ImplementationSpecific
