Ingress-nginx/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: blog
spec:
  ingressClassName: nginx
  rules:
  - host: blog.wu.com
    http:
      paths:
      - backend:
          service:
            name: wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - blog.wu.com
    secretName: blog.wu.com
